# azure-sdk-for-c

./: CMakeLists.txt
.github/: CODEOWNERS
cmake-modules/: AddTestCMocka.cmake  MapFiles.cmake
doc/platform/: README.md
eng/cmake/: global_compile_options.txt
inc/azure/core/: az_credentials.h  az_http_transport.h
samples/iot/hub/src/: paho_iot_hub_methods_example.c
samples/iot/provisioning/src/: paho_iot_provisioning_example.c
samples/keyvault/src/: keys_client_example.c
sdk/core/az_core/: CMakeLists.txt
sdk/core/az_core/internal/: az_span_internal.h
sdk/core/az_core/src/: az_span_base64.c
sdk/core/az_core/test/: test_az_http.c  test_az_pipeline.c
sdk/inc/azure/core/: az_log.h
sdk/inc/azure/iot/: az_iot_hub_client.h
sdk/inc/azure/keyvault/: az_keyvault.h
sdk/platform/http_client/curl/: CMakeLists.txt
sdk/platform/http_client/curl/src/: az_curl.c
sdk/samples/iot/hub/: README.md
sdk/tests/core/: CMakeLists.txt  test_az_logging.c  test_az_policy.c  test_az_span.c
sdk/tests/iot/: CMakeLists.txt  main.c  test_az_iot_hub_client.c
src/azure/core/: CMakeLists.txt  az_aad.c  az_credential_token.c  az_credential_token_private.h  az_http_policy.c  az_http_policy_private.h  az_http_policy_retry.c  az_http_private.h  az_json_parser.c  az_json_pointer.c  az_json_string_private.h  az_span.c
src/azure/iot/: az_iot_hub_client.c  az_iot_hub_client_telemetry.c
src/azure/keyvault/: CMakeLists.txt  az_keyvault_client.c
src/azure/platform/: az_curl.c  az_nohttp.c
src/inc/iot/: az_iot_hub_client.h  az_iot_provisioning_client.h
tests/core/: test_az_credential_client_secret.c
tests/iot/: test_az_iot_provisioning_client.c
tests/keyvault/: keyvault_unit_tests.c
tests/storage/: CMakeLists.txt
(+36 files in other folders)
